test-cases.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-alpine-deployment
  labels:
    app: test-alpine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-alpine
  template:
    metadata:
      labels:
        app: test-alpine
    spec:
      containers:
      - name: test-alpine-container
        image: redis:alpine3.17
