skripsi-manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audi-skripsi-log-ingestor-deployment
  labels:
    app: audi-skripsi-log-ingestor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audi-skripsi-log-ingestor
  template:
    metadata:
      labels:
        app: audi-skripsi-log-ingestor
    spec:
      containers:
      - name: audi-skripsi-log-ingestor-container
        image: audi-skripsi-log-ingestor:1.1.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: audi-skripsi-log-ingestor-service
  labels:
    app: audi-skripsi-log-ingestor
spec:
  selector:
    app: audi-skripsi-log-ingestor
  ports:
    - name: http
      port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audi-skripsi-log-ingestor-grpc-deployment
  labels:
    app: audi-skripsi-log-ingestor-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audi-skripsi-log-ingestor-grpc
  template:
    metadata:
      labels:
        app: audi-skripsi-log-ingestor-grpc
    spec:
      containers:
      - name: audi-skripsi-log-ingestor-grpc-container
        image: audi-skripsi-log-ingestor:1.1.1
        command: ["./main"]
        args: ["--grpc-mode"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: audi-skripsi-log-ingestor-grpc-service
  labels:
    app: audi-skripsi-log-ingestor-grpc
spec:
  type: NodePort
  selector:
    app: audi-skripsi-log-ingestor-grpc
  ports:
    - name: grpc
      port: 80
      targetPort: 8080
      nodePort: 30010

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audi-skripsi-lambda-identifier-deployment
  labels:
    app: audi-skripsi-lambda-identifier
spec:
  replicas: 3
  selector:
    matchLabels:
      app: audi-skripsi-lambda-identifier
  template:
    metadata:
      labels:
        app: audi-skripsi-lambda-identifier
    spec:
      containers:
      - name: audi-skripsi-lambda-identifier-container
        image: audi-skripsi-lambda-identifier:1.0.1
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audi-skripsi-lambda-level-standardizer-deployment
  labels:
    app: audi-skripsi-lambda-level-standardizer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: audi-skripsi-lambda-level-standardizer
  template:
    metadata:
      labels:
        app: audi-skripsi-lambda-level-standardizer
    spec:
      containers:
      - name: audi-skripsi-lambda-level-standardizer-container
        image: audi-skripsi-lambda-level-standardizer:1.0.1
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audi-skripsi-lambda-batch-identifier-deployment
  labels:
    app: audi-skripsi-lambda-batch-identifier
spec:
  replicas: 3
  selector:
    matchLabels:
      app: audi-skripsi-lambda-batch-identifier
  template:
    metadata:
      labels:
        app: audi-skripsi-lambda-batch-identifier
    spec:
      containers:
      - name: audi-skripsi-lambda-batch-identifier-container
        image: audi-skripsi-lambda-identifier:1.0.1
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audi-skripsi-lambda-batch-level-standardizer-deployment
  labels:
    app: audi-skripsi-lambda-batch-level-standardizer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: audi-skripsi-lambda-batch-level-standardizer
  template:
    metadata:
      labels:
        app: audi-skripsi-lambda-batch-level-standardizer
    spec:
      containers:
      - name: audi-skripsi-lambda-batch-level-standardizer-container
        image: audi-skripsi-lambda-level-standardizer:1.0.1
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audi-skripsi-lambda-event-presenter-deployment
  labels:
    app: audi-skripsi-lambda-event-presenter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: audi-skripsi-lambda-event-presenter
  template:
    metadata:
      labels:
        app: audi-skripsi-lambda-event-presenter
    spec:
      containers:
      - name: audi-skripsi-lambda-event-presenter-container
        image: audi-skripsi-lambda-event-presenter:1.1.2
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audi-skripsi-lambda-batch-event-presenter-deployment
  labels:
    app: audi-skripsi-lambda-batch-event-presenter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: audi-skripsi-lambda-batch-event-presenter
  template:
    metadata:
      labels:
        app: audi-skripsi-lambda-batch-event-presenter
    spec:
      containers:
      - name: audi-skripsi-lambda-batch-event-presenter-container
        image: audi-skripsi-lambda-event-presenter:1.1.2
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audi-skripsi-lambda-batch-processor-deployment
  labels:
    app: audi-skripsi-lambda-batch-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audi-skripsi-lambda-batch-processor
  template:
    metadata:
      labels:
        app: audi-skripsi-lambda-batch-processor
    spec:
      containers:
      - name: audi-skripsi-lambda-batch-processor-container
        image: audi-skripsi-lambda-batch-processor:1.0.1
        command: ["./main"]
        args: ["-log-extractor"]
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: audi-skripsi-lambda-batch-processor-service
  labels:
    app: audi-skripsi-lambda-batch-processor
spec:
  selector:
    app: audi-skripsi-lambda-batch-processor
  ports:
    - name: http
      port: 80
      targetPort: 8081


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audi-skripsi-lambda-batch-processor-ingest-deployment
  labels:
    app: audi-skripsi-lambda-batch-processor-ingest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audi-skripsi-lambda-batch-processor-ingest
  template:
    metadata:
      labels:
        app: audi-skripsi-lambda-batch-processor-ingest
    spec:
      containers:
      - name: audi-skripsi-lambda-batch-processor-ingest-container
        image: audi-skripsi-lambda-batch-processor:1.0.1
        command: ["./main"]
        args: ["-log-injector"]
        ports:
        - containerPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audi-skripsi-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: skripsi.audipasuatmadi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audi-skripsi-log-ingestor-service
            port:
              number: 80
  - host: batch.skripsi.audipasuatmadi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audi-skripsi-lambda-batch-processor-service
            port:
              number: 80
